ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /user(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 5000

          - pathType: Prefix
            path: /room(/|$)(.*)
            backend:
              service:
                name: room-service
                port:
                  number: 5000

          - pathType: Prefix
            path: /reservation(/|$)(.*)
            backend:
              service:
                name: reservation-service
                port:
                  number: 5000
